<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintVertical_weight="2"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/dice_1"
            android:src="@drawable/one"/>

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/dice_2"
            android:src="@drawable/one"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frame">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_results"
            android:textSize="27sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="30sp"
            android:gravity="center|top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enter_your_name"
            android:textSize="27sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="27sp"
            android:theme="@style/MyEditTextTheme"/>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_second"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/roll"
            android:textColor="@color/beige"
            android:backgroundTint="@color/brown"
            android:layout_gravity="center"/>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>